<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    //boton de Peso

    <Button
        android:id="@+id/btnPeso"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:onClick="irPeso"
        android:text="@string/btn1"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="135dp" />

    //boton de Longitud
    <Button
        android:id="@+id/btn_Longitud"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:onClick="irLong"
        android:text="@string/btn2"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPeso" />

    //boton de Temperatura
    <Button
        android:id="@+id/btn_Temperatura"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:onClick="irTemp"
        android:text="@string/btn3"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Longitud" />

    //boton de Volumen
    <Button
        android:id="@+id/btn_Volumen"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:onClick="irVolu"
        android:text="@string/btn4"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Temperatura" />

</androidx.constraintlayout.widget.ConstraintLayout>